# second_brain_collector

./: .gitignore  README.md
kindle_highlights/: README.md  config.py  dev.py  extract_quotes.py  helpers.py  main.py  notion_client.py  process_highlights.py
terraform-config/: .pre-commit-config.yaml  backend.tf  provider.tf  variables.tf
youtube_transcripts/: .pre-commit-config.yaml  README.md  dev.py  main.py  notion_client.py  notion_transcript_updater.py  pyproject.toml  youtube_transcript_fetcher.py
youtube_transcripts/src/: main.py  youtube_transcript_fetcher.py
youtube_transcripts/src/utils/: notion_client.py
